--- a/projects/demo/src/app/app.component.scss
+++ b/projects/demo/src/app/app.component.scss
@@ -2,14 +2,14 @@
 
   display: flex;
   flex-direction: column;
-  gap: 48px;
-
-  padding-top:48px;
+  overflow: hidden;
+  height: 100vh;
 
   .header {
     position: fixed;
-    z-index: 999;
     top: 0;
+    height: 56px;
+    z-index: 999;
     display: flex;
     gap: 8px;
     h1 {
@@ -17,23 +17,28 @@
     }
   }
 
+  .body {
+    margin-top: 56px;
+    flex: 1;
+    overflow-y: auto;
+  }
+
   .menu {
+    padding-top: 56px;
     width: 256px;
-    position: fixed;
     z-index: 998;
-    top: 0;
-    left: 0;
-    padding-top: 64px;
     .mat-list-item {
       font-size: 14px !important;
     }
   }
 
   .content {
-    padding: 64px 48px 50vh;
+    padding: 0px 48px 50vh;
     display: flex;
     flex-direction: column;
-    gap: 48px;
+    ::ng-deep app-example-viewer {
+      padding-top: 48px;
+    }
   }
 
 }
