Add aria-controls attribute

--- a/projects/ngx-mat-combobox/src/lib/ngx-mat-combobox.component.html
+++ b/projects/ngx-mat-combobox/src/lib/ngx-mat-combobox.component.html
@@ -97,6 +97,7 @@
   <ng-template #dropdownTpl>
     <div
       #dropdown
+      [id]="id + '-dropdown'"
       class="ngx-mat-combobox-dropdown"
       [class]="dropdownClass">
 
