--- a/projects/ngx-mat-combobox/src/lib/ngx-mat-combobox.component.html
+++ b/projects/ngx-mat-combobox/src/lib/ngx-mat-combobox.component.html
@@ -85,7 +85,7 @@
     <mat-spinner
       [diameter]="loadingSpinnerDiameter"
       [strokeWidth]="loadingSpinnerStrokeWidth"
-      color="primary"></mat-spinner>
+      [color]="loadingSpinnerColor"></mat-spinner>
   </div>
 
   <div
