--- a/projects/ngx-mat-combobox/src/lib/ngx-mat-combobox.component.scss
+++ b/projects/ngx-mat-combobox/src/lib/ngx-mat-combobox.component.scss
@@ -118,6 +118,7 @@ $icon-size: 1.125em;
     background-color: #fff;
     box-shadow: 0 0 10px 5px rgba(0, 0, 0, .12);
     border-radius: 4px;
+    overflow: hidden;
 
     min-height: 48px;
 
