--- a/projects/demo/src/app/examples/with-object-options/with-object-options.component.scss
+++ b/projects/demo/src/app/examples/with-object-options/with-object-options.component.scss
@@ -2,13 +2,7 @@
 
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  gap: 8px;
-
-  .actions {
-    display: flex;
-    align-items: center;
-    gap: 16px;
-  }
+  align-items: self-start;
+  gap: 24px;
 
 }
