--- a/projects/demo/src/styles.scss
+++ b/projects/demo/src/styles.scss
@@ -17,3 +17,40 @@ p {
   margin-bottom: 0;
 }
 
+
+.example-actions {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.example-settings {
+  font-size: 12px;
+  padding: 16px;
+  border-radius: 4px;
+  background-color: #f5f5f5;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  div,
+  mat-radio-group {
+    display: flex;
+    gap: 12px;
+    align-items: center;
+  }
+  input {
+    border: solid 2px rgba(0,0,0,.54);
+    border-radius: 3px;
+    background-color: transparent;
+    &[type=number] {
+      width: 50px;
+    }
+  }
+}
+
+.example-model {
+  font-size: 12px;
+  padding: 16px;
+  border-radius: 4px;
+  border: dashed 1px rgba(0,0,0,.54);
+}
