Fix issues with key navigation in dropdown

--- a/projects/ngx-mat-combobox/src/lib/ngx-mat-combobox.component.html
+++ b/projects/ngx-mat-combobox/src/lib/ngx-mat-combobox.component.html
@@ -111,7 +111,10 @@
           [ngTemplateOutletContext]="{combo: this, $implicit: this}"></ng-container>
       </div>
 
-      <div #dropdownBody class="ngx-mat-combobox-dropdown-body">
+      <div
+        #dropdownBody
+        class="ngx-mat-combobox-dropdown-body"
+        role="listbox">
 
         <ngx-mat-combobox-option
           matRipple
