Hide placeholder's div if not defined

--- a/projects/ngx-mat-combobox/src/lib/ngx-mat-combobox.component.html
+++ b/projects/ngx-mat-combobox/src/lib/ngx-mat-combobox.component.html
@@ -2,7 +2,7 @@
   <div class="ngx-mat-combobox-display">
 
     <div
-      *ngIf="!autocomplete && empty && shouldLabelFloat"
+      *ngIf="!autocomplete && empty && shouldLabelFloat && placeholder"
       class="ngx-mat-combobox-placeholder">{{ placeholder }}
     </div>
 
