Add backdrop/backdropClass example

--- a/projects/demo/src/app/examples/with-input-in-dropdown/with-input-in-dropdown.component.html
+++ b/projects/demo/src/app/examples/with-input-in-dropdown/with-input-in-dropdown.component.html
@@ -9,6 +9,12 @@
   <div>
     <code>[autoOpen]=</code> <mat-checkbox [(ngModel)]="autoOpen"></mat-checkbox> // expand when combobox is focused (for key navigation)
   </div>
+  <div>
+    <code>[dropdownBackdrop]=</code> <mat-checkbox [(ngModel)]="dropdownBackdrop"></mat-checkbox>
+  </div>
+  <div>
+    <code>[dropdownBackdropClass]=</code> <mat-checkbox [(ngModel)]="applyDropdownBackdropClass">rainbow</mat-checkbox>
+  </div>
 </div>
 
 <div class="example-model">
@@ -22,8 +28,11 @@
     [autoOpen]="autoOpen"
     [(ngModel)]="model"
     [options]="options"
+    [dropdownBackdrop]="dropdownBackdrop"
+    [dropdownBackdropClass]="applyDropdownBackdropClass ? 'rainbow' : undefined"
     [dropdownKeyNavTypeAhead]="false"
     [dropdownKeyNavHomeAndEnd]="false"
+    dropdownAutoFocus
     placeholder="Select actor...">
 
     <ng-template ngxMatComboboxHeader>
