Add disabled state to object options example

--- a/projects/demo/src/app/examples/with-object-options/with-object-options.component.html
+++ b/projects/demo/src/app/examples/with-object-options/with-object-options.component.html
@@ -9,6 +9,15 @@
   <div>
     <code>[useValue]=</code> <mat-checkbox (change)="modelChanged()" [(ngModel)]="useValue"></mat-checkbox>
   </div>
+  <div>
+    <code>valueAccessor="id"</code>
+  </div>
+  <div>
+    <code>labelAccessor="title"</code>
+  </div>
+  <div>
+    <code>disabledAccessor="disabled"</code>
+  </div>
 </div>
 
 <div class="example-model">
