--- a/projects/demo/src/app/examples/with-input-in-dropdown/with-input-in-dropdown.component.html
+++ b/projects/demo/src/app/examples/with-input-in-dropdown/with-input-in-dropdown.component.html
@@ -29,7 +29,7 @@
     [(ngModel)]="model"
     [options]="options"
     [dropdownBackdrop]="dropdownBackdrop"
-    [dropdownBackdropClass]="applyDropdownBackdropClass ? 'rainbow' : undefined"
+    [dropdownBackdropClass]="applyDropdownBackdropClass ? 'rainbow' : 'cdk-overlay-transparent-backdrop'"
     [dropdownKeyNavTypeAhead]="false"
     [dropdownKeyNavHomeAndEnd]="false"
     dropdownAutoFocus
