--- a/projects/demo/src/app/examples/with-input-in-dropdown/with-input-in-dropdown.component.html
+++ b/projects/demo/src/app/examples/with-input-in-dropdown/with-input-in-dropdown.component.html
@@ -25,6 +25,7 @@
     [dropdownKeyNavTypeAhead]="false"
     [dropdownKeyNavHomeAndEnd]="false"
     dropdownAutoFocus
+    dropdownBackdrop
     placeholder="Select actor...">
 
     <ng-template ngxMatComboboxHeader>
