--- a/projects/demo/src/app/examples/remote-data-demo/remote-data-demo.component.html
+++ b/projects/demo/src/app/examples/remote-data-demo/remote-data-demo.component.html
@@ -2,24 +2,28 @@
   Real world example using remote data from <a href="https://dummyjson.com" target="_blank">https://dummyjson.com</a>.
 </p>
 
-<div class="actions">
+<div class="example-actions">
   <button mat-flat-button color="primary" (click)="setRandomValue()">Set random value</button>
   <button mat-stroked-button (click)="clearValue()">Reset</button>
   <mat-slide-toggle (change)="combo.readonly = !combo.readonly" [checked]="combo.readonly">Readonly</mat-slide-toggle>
   <mat-slide-toggle (change)="combo.disabled = !combo.disabled" [checked]="combo.disabled">Disabled</mat-slide-toggle>
 </div>
 
-<p>
+<div class="example-model">
   <code>model = {{ model | json }}</code>
-</p>
+</div>
 
 <mat-form-field appearance="outline" style="width: 100%">
   <mat-label>Users</mat-label>
+
   <button
     matSuffix
     mat-icon-button
     [disabled]="combo.disabled || combo.readonly"
     (click)="combo.clear(); $event.stopPropagation()"><mat-icon>clear</mat-icon></button>
+
+  <mat-error>This field is required!</mat-error>
+
   <ngx-mat-combobox
     #combo
     required
@@ -29,6 +33,8 @@
     dropdownClass="users-dropdown"
     dropdownAutoFocus
     dropdownTrapFocus
+    [dropdownKeyNavTypeAhead]="false"
+    [dropdownKeyNavHomeAndEnd]="false"
     [(ngModel)]="model"
     valueAccessor="id"
     [labelAccessor]="getUserName"
@@ -94,9 +100,12 @@
     </ng-template>
 
     <ng-template ngxMatComboboxNoOption>
-      <div class="users-dropdown__no-option">
+      <div *ngIf="query" class="users-dropdown__no-option">
         <span>User with name or email <strong>{{ query }}</strong> not found&hellip;</span>
         <button mat-flat-button color="primary" (click)="addNewUser()"><mat-icon>add</mat-icon> Add new user</button>
+      </div>
+      <div *ngIf="!query" class="users-dropdown__no-option">
+        No results...
       </div>
     </ng-template>
 
