--- a/projects/demo/src/app/examples/remote-data-demo/remote-data-demo.component.scss
+++ b/projects/demo/src/app/examples/remote-data-demo/remote-data-demo.component.scss
@@ -1,15 +1,11 @@
 
 :host {
+
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  gap: 8px;
+  align-items: self-start;
+  gap: 24px;
 
-  .actions {
-    display: flex;
-    align-items: center;
-    gap: 16px;
-  }
 }
 
 // global selection display class
