--- a/projects/demo/src/styles.scss
+++ b/projects/demo/src/styles.scss
@@ -3,7 +3,7 @@
 @use '@angular/material' as mat;
 
 // select from https://nowzoo.github.io/ngx-highlight-js/
-@import '~highlight.js/styles/github-dark.css';
+@import '~highlight.js/styles/github.css';
 
 html, body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
